Developed pieces for summary function, still need to put function together.

--- a/ST588Project1.qmd
+++ b/ST588Project1.qmd
@@ -16,8 +16,8 @@ editor: visual
 library("tidyverse")
 library("censusapi")
 library("tidycensus")
-library("dplyr")
 library("jsonlite")
+library("dplyr")
 ```
 
 # Check names *can be removed from final project, or kept to help user find columns of interest*
@@ -84,7 +84,6 @@ rawToTibble(censusApiTest)
 ```
 
 ## Create a function to help with querying the API
-
 ```{r}
 checkVarsValid <- function(vars,validVars){
     if (!all(vars %in% validVars)) {
@@ -181,7 +180,6 @@ retrieveCensus <- function(year=2022,numericVars=c("AGEP","PWGTP"),catVars=c("SE
 ```
 
 ## Storing returned tibble for working. Can be removed final project
-
 ```{r}
 state17 <- retrieveCensus(numericVars = c("AGEP","PWGTP","JWDP"),catVars = c("FER","SCHL","SEX"),geographyLevel = "State", geographySpec = 17)
 
@@ -210,21 +208,25 @@ state17MultiYear <- retrieveMultiYearCensus(years=c(2021,2022),geographyLevel = 
 state17MultiYear
 ```
 
-
 # Writing a Generic Function for Summarizing
+
 ### test "retrieveCensus" function
+
 ```{r}
 censusData<-retrieveCensus(year=2022, numericVars=c("AGEP", "PWGTP", "JWAP", "JWDP"),    catVars = c("SEX", "HHL"))
 ```
 
 ### Check "retrieveCensus" function output object structure
+
 ```{r}
 names(censusData)
 length(names(censusData))
 str(censusData)
 head(censusData)
 ```
+
 # Create custom summary function
+
 ```{r}
 numVars <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","PWGTP")
 catVars <- c("FER","HHL","HISPEED","JWTRNS","SCH","SCHL","SEX")
@@ -243,14 +245,67 @@ for(i in 1:length(namesCensusData)) {
   } 
 }
 
-## make tibbles from dataset variables by data type and remove null values
+## make tibbles to contain numeric and categorical variable names for data pulled from API by user.
+
+#Categorical variables
 dataCatVarsTbl <- as_tibble(dataCatVars)
 catVarsTblShort<-dataCatVarsTbl |> 
   filter(dataCatVarsTbl$value!="")
+
+#Numeric variables
 dataNumVarsTbl <- as_tibble(dataNumVars)
 numVarsTblShort<-dataNumVarsTbl |>
   filter(dataNumVarsTbl$value!="")
 
+censusData<- censusData |>
+  mutate(PWGTP=as.numeric(PWGTP))
+
+head(censusData)
+#subset numeric data for summary function
+numCensus<-censusData |>
+  select(any_of(numVars) & -PWGTP) |>
+  mutate_all(as.numeric)
+#numCensus
+
+#Subset categorical data for summary function
+catCensus<-censusData |>
+  select(any_of(catVars))
+#catCensus
+
+
+splMean<-sum(numCensus$AGEP %*% censusData$PWGTP)/sum(censusData$PWGTP)
+splMean
+
+
+
+
+
+
+##############################################################
+#Possibly useful code below, may not be necessary
+
+##Create a list of variable strings to loop through function
+numVarString<-character(nrow(numVarsTblShort))
+ for(i in 1:nrow(numVarsTblShort)) {
+   numVarString[i]<-as_vector(paste(numVarsTblShort[i,],"[i]", sep="$"))
+}
+
+
+catVarString<-character(nrow(catVarsTblShort))
+ for(i in 1:nrow(catVarsTblShort)) {
+   catVarString[i]<-as_vector(paste(catVarsTblShort[i,],"[i]", sep="$"))
+}
+
+splMean<-length(as_vector(numVarsTblShort))
+for(i in 1:length(as_vector(dataNumVarsTbl))){
+  sum(censusData$)
+}
+
+
+length(as_vector(numVarsTblShort))
+length(numVarString)
+catVarString
+nrow(numVarsTblShort)
 names(dataCatVarsTbl)
 
 lengths(dataCatVarsTbl$value)
@@ -265,12 +320,12 @@ numVarsTblShort
 namesCensusData
 dataCatVars
 dataNumVars
-rm(dataCatVars, dataNumVars, catVarsTblShort)
+rm(numVarString)
 ```
 
 ### Test Summary Function
+
 ```{r}
 summary<-summaryCensus(tbl=censusData)
 summary
 ```
-
