--- a/ST588Project1.qmd
+++ b/ST588Project1.qmd
@@ -17,6 +17,7 @@ library("tidyverse")
 library("censusapi")
 library("tidycensus")
 library("jsonlite")
+library("lubridate")
 ```
 
 # Check names *can be removed from final project, or kept to help user find columns of interest*
@@ -89,6 +90,37 @@ checkVarsValid <- function(vars,validVars){
     stop("Invalid variables: ", paste(vars[!vars %in% validVars], collapse = ", "))
   }
 }
+
+varsLkpTibble <- function(year,varName){
+  rawData <- httr::GET(url=paste0('https://api.census.gov/data/',year,'/acs/acs1/pums/variables/',varName,'.json'))
+  jsonData <- fromJSON(rawToChar(rawData$content))
+  tibbleData <- as_tibble(jsonData$values$item)
+  tibbleData <- tibbleData %>%
+    pivot_longer(cols=names(tibbleData),
+                 names_to = varName,
+                 values_to = "TIME_INTERVAL"
+                 )
+  return(tibbleData)
+}
+
+lkpToMiddleTime <- function(tibble,year=2022,timeVar){
+  apiData <- varsLkpTibble(year=year,varName = timeVar)
+  intervalTibble <- inner_join(tibble,apiData)
+  data <- intervalTibble %>%
+    select(-c(timeVar)) %>%
+    mutate(TIME_INTERVAL = ifelse(TIME_INTERVAL == "N/A (not a worker; worker who worked from home)", NA, TIME_INTERVAL))
+  names(data) <- c(names(data)[1:(length(names(data))-1)],timeVar)
+  data <- data %>%
+    separate_wider_delim(timeVar,delim = " to ",names=c('StartTime','EndTime')) %>%
+    mutate(StartTime = parse_time(gsub("\\.", "", StartTime),format = "%I:%M %p"),
+           EndTime = parse_time(gsub("\\.", "", EndTime),format = "%I:%M %p"),
+           MidTime = StartTime
+           )
+  data[[timeVar]] <- data$MidTime
+  data <- data %>%
+    select(-c('StartTime','EndTime','MidTime'))
+  return(data)
+}
 ```
 
 ```{r}
@@ -107,7 +139,7 @@ retrieveCensus <- function(year=2022,numericVars=c("AGEP","PWGTP"),catVars=c("SE
   
   numericReq <- "PWGTP"
   
-  numericOptions <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","PWGTP")
+  numericOptions <- c("AGEP","GASP","GRPIP","JWMNP","PWGTP")
   timeOptions <- c("JWAP","JWDP")
   
   numericTimeOptions <- c(numericOptions,timeOptions)
@@ -168,7 +200,14 @@ retrieveCensus <- function(year=2022,numericVars=c("AGEP","PWGTP"),catVars=c("SE
   
   ## Change data types to be appropriate
   
-  data[numericVars[numericVars %in% timeOptions]] <- lapply(data[numericVars[numericVars %in% timeOptions]],as.POSIXct,format = "%Y-%m-%d %H:%M:%S")
+  #data[numericVars[numericVars %in% timeOptions]] <- lapply(data[numericVars[numericVars %in% timeOptions]],as.POSIXct,format = "%Y-%m-%d %H:%M:%S")
+  
+  
+  for (value in intersect(numericVars,timeOptions)){
+    data <- lkpToMiddleTime(data,year=year,timeVar = value)
+  }
+  
+  #lkpToMiddleTime(data,year=2022,timeVar = "JWDP")
   
   data[numericVars[numericVars %in% numericOptions]] <- lapply(data[numericVars[numericVars %in% numericOptions]],as.numeric)
   
@@ -180,9 +219,35 @@ retrieveCensus <- function(year=2022,numericVars=c("AGEP","PWGTP"),catVars=c("SE
 
 ## Storing returned tibble for working. Can be removed final project
 ```{r}
-state17 <- retrieveCensus(numericVars = c("AGEP","PWGTP","JWDP"),catVars = c("FER","SCHL","SEX"),geographyLevel = "State", geographySpec = 17)
+state17 <- retrieveCensus(numericVars = c("AGEP","PWGTP","JWAP","JWDP"),catVars = c("FER","SCHL","SEX"),geographyLevel = "State", geographySpec = 17)
 
 state17
+```
+## Testing time range
+```{r}
+lkpToMiddleTime <- function(tibble,year=2022,timeVar){
+  apiData <- varsLkpTibble(year=year,varName = timeVar)
+  intervalTibble <- inner_join(tibble,apiData)
+  data <- intervalTibble %>%
+    select(-c(timeVar)) %>%
+    mutate(TIME_INTERVAL = ifelse(TIME_INTERVAL == "N/A (not a worker; worker who worked from home)", NA, TIME_INTERVAL))
+  names(data) <- c(names(data)[1:(length(names(data))-1)],timeVar)
+  data <- data %>%
+    separate_wider_delim(timeVar,delim = " to ",names=c('StartTime','EndTime')) %>%
+    mutate(StartTime = parse_time(gsub("\\.", "", StartTime),format = "%I:%M %p"),
+           EndTime = parse_time(gsub("\\.", "", EndTime),format = "%I:%M %p"),
+           MidTime = StartTime
+           )
+  data[[timeVar]] <- data$MidTime
+  data <- data %>%
+    select(-c('StartTime','EndTime','MidTime'))
+  return(data)
+}
+
+test <- lkpToMiddleTime(state17,timeVar = "JWDP")
+test
+#names(test)[1:(length(names(test))-1)]
+
 ```
 
 ## Function to pass multiple years and retrieve data
