--- a/ST588Project1.qmd
+++ b/ST588Project1.qmd
@@ -17,6 +17,7 @@ library("tidyverse")
 library("censusapi")
 library("tidycensus")
 library("jsonlite")
+library("dplyr")
 library("lubridate")
 ```
 
