--- a/ST588Project1.qmd
+++ b/ST588Project1.qmd
@@ -104,23 +104,35 @@ varsLkpTibble <- function(year,varName){
   return(tibbleData)
 }
 
+midTimeFunc <- function(startTime,endTime){
+  midAddlSecs <- as.numeric(difftime(endTime,startTime,units="secs"))/2
+  midTotalSecs <- as.numeric(startTime) + midAddlSecs
+  midhours <- floor(midTotalSecs/(60*60))
+  midminutes <- floor((midTotalSecs-(60*60*midhours))/60)
+  midseconds <- floor((midTotalSecs-(60*60*midhours)-60*midminutes)/60)
+  timeString <- paste(midhours,midminutes,midseconds,sep=":")
+  hmsTime <- hms::parse_hms(timeString)
+  return(timeString)
+}
+
 lkpToMiddleTime <- function(tibble,year=2022,timeVar){
   apiData <- varsLkpTibble(year=year,varName = timeVar)
   intervalTibble <- inner_join(tibble,apiData)
-  data <- intervalTibble %>%
+  returnData <- intervalTibble %>%
     select(-c(timeVar)) %>%
     mutate(TIME_INTERVAL = ifelse(TIME_INTERVAL == "N/A (not a worker; worker who worked from home)", NA, TIME_INTERVAL))
-  names(data) <- c(names(data)[1:(length(names(data))-1)],timeVar)
-  data <- data %>%
+  names(returnData) <- c(names(returnData)[1:(length(names(returnData))-1)],timeVar)
+  returnData <- returnData %>%
     separate_wider_delim(timeVar,delim = " to ",names=c('StartTime','EndTime')) %>%
     mutate(StartTime = parse_time(gsub("\\.", "", StartTime),format = "%I:%M %p"),
            EndTime = parse_time(gsub("\\.", "", EndTime),format = "%I:%M %p"),
-           MidTime = StartTime
+           MidTime =
+             ifelse(!is.na(StartTime), midTimeFunc(StartTime,EndTime),NA)
            )
-  data[[timeVar]] <- data$MidTime
-  data <- data %>%
+  returnData[[timeVar]] <- hms::as_hms(returnData$MidTime)
+  returnData <- returnData %>%
     select(-c('StartTime','EndTime','MidTime'))
-  return(data)
+  return(returnData)
 }
 ```
 
